// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getValidContributions filters out contributions that are for deleted endpoints 1`] = `
Array [
  Object {
    "contributionKey": "description",
    "endpointId": "path_xhUZ8irdJO.GET",
    "id": "field_7u9pabP6VJ",
    "value": "goodbye",
  },
]
`;

exports[`getValidContributions filters out contributions that are for deleted fields 1`] = `
Array [
  Object {
    "contributionKey": "description",
    "endpointId": "path_xhUZ8irdJO.GET",
    "id": "field_7u9pabP6VJ",
    "value": "goodbye",
  },
]
`;

exports[`getValidContributions returns all valid contributions 1`] = `
Array [
  Object {
    "contributionKey": "description",
    "endpointId": "path_UOIsxzICu5.GET",
    "id": "field_LRYtHDYkVO",
    "value": "hello",
  },
  Object {
    "contributionKey": "description",
    "endpointId": "path_xhUZ8irdJO.GET",
    "id": "field_7u9pabP6VJ",
    "value": "goodbye",
  },
]
`;
